[tool.poetry]
name = "openai_tools"
version = "0.1.2"
description = ""
authors = ["Erikaospace <erika@spacee.com>"]
readme = "README.md"
packages = [{include = "openai"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
